src/test/deca/syntax/valid/class_decl_03.deca
// Description:
//    Programme testant la déclaration d'une classe avec attribut.
//
// Resultats:
//		- 0 si le test est réussi
//
//
// Historique:
//    cree le 16/01/2023

class A {
	int a;
}

class B extends A {
}