src/test/deca/syntax/invalid/class_method_brace_missing.deca
// Description:
//    Programme testant la déclaration d'une methode avec une parenthèse manquante
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 16/01/2023


class A {
	void m( {
		int x;
    }
}
